distributed traversing and metaloading done