@@ -1,11 +1,15 @@
 package bthesis.provenancechain;
 
 import java.io.File;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Arrays;
 import java.util.ArrayList;
 import java.security.NoSuchAlgorithmException;
+import java.util.Map;
 
+import bthesis.metageneration.WriteDocument;
+import org.openprovenance.prov.interop.InteropFramework;
 import org.openprovenance.prov.model.Entity;
 import org.openprovenance.prov.model.Bundle;
 import org.openprovenance.prov.model.Document;
@@ -16,6 +20,8 @@ import bthesis.metageneration.MetaBuilder;
 import bthesis.metageneration.HashDocument;
 import bthesis.metageneration.MetaGeneration;
 
+import javax.ws.rs.DELETE;
+
 /**
  * The Initializer class is responsible for initializing the application state,
  * including the creation of a DataHolder to store provenance documents and other metadata.
@@ -23,9 +29,10 @@ import bthesis.metageneration.MetaGeneration;
  * @author Tomas Zobac
  */
 public class Initializer {
-    private final DataHolder memory;
+    private final LocalPidResolver memory;
     private final List<QualifiedName> connectors;
     private final QualifiedName metaID;
+    private final Map<QualifiedName, Document> documents;
 
     /**
      * Initializes a new instance of the Initializer class.
@@ -37,16 +44,22 @@ public class Initializer {
      * @throws NoSuchAlgorithmException If the specified algorithm does not exist.
      * @throws InterruptedException     If the thread is interrupted.
      */
-    public Initializer(HashDocument hasher, MetaBuilder meta, List<File> files) throws NoSuchAlgorithmException, InterruptedException {
-        this.memory = new DataHolder();
-        this.connectors = Arrays.asList(
-                this.memory.getSenderConnector(),
-                this.memory.getReceiverConnector(),
-                this.memory.getExternalInputConnector());
+    public Initializer(HashDocument hasher,
+                       MetaBuilder meta,
+                       List<File> files,
+                       Map<String, QualifiedName> connectors) throws NoSuchAlgorithmException, InterruptedException {
+        this.documents = new HashMap<>();
+        this.memory = new LocalPidResolver();
+        this.connectors = List.of(
+                connectors.get("senderConnector"),
+                connectors.get("receiverConnector"),
+                connectors.get("externalConnector"));
         MetaGeneration generation = new MetaGeneration();
-        this.memory.setMetadocument(generation.generate(hasher, meta, files));
-        this.memory.setDocuments(files);
-        Bundle temp = (Bundle) this.memory.getMetadocument().getStatementOrBundle().get(0);
+        Document document = generation.generate(hasher, meta, files);
+        WriteDocument outputWriter = new WriteDocument("src/main/resources/", document);
+        outputWriter.writeDocument();
+        setDocuments(files);
+        Bundle temp = (Bundle) document.getStatementOrBundle().get(0);
         this.metaID = temp.getId();
         fillTable();
         fakeLoading();
@@ -73,7 +86,7 @@ public class Initializer {
      *
      * @return A DataHolder object.
      */
-    public DataHolder getMemory() {
+    public LocalPidResolver getMemory() {
         return memory;
     }
 
@@ -82,7 +95,7 @@ public class Initializer {
      * Only entities that match predefined connector types are added to the table.
      */
     private void fillTable() {
-        for (Document document : memory.getDocuments().values()) {
+        for (Document document : this.documents.values()) {
             Bundle bundle = (Bundle) document.getStatementOrBundle().get(0);
             for (Statement statement : bundle.getStatement()) {
                 if (statement instanceof Entity entity) {
@@ -99,6 +112,32 @@ public class Initializer {
                     }
                 }
             }
+        }
+    }
+
+    /**
+     * Returns the map of QualifiedName to Document objects representing the provenance documents.
+     *
+     * @return A map of QualifiedName to Document objects.
+     */
+    @Deprecated
+    public Map<QualifiedName, Document> getDocuments() {
+        return documents;
+    }
+
+    /**
+     * Populates the document map based on the list of File objects passed.
+     * Reads each file and extracts its bundle ID and document to populate the map.
+     *
+     * @param documents A list of File objects representing the provenance documents.
+     */
+    @Deprecated
+    public void setDocuments(List<File> documents) {
+        InteropFramework inFm = new InteropFramework();
+        for (File file : documents) {
+            Document temp = inFm.readDocumentFromFile(file.getAbsolutePath());
+            Bundle bundle = (Bundle) temp.getStatementOrBundle().get(0);
+            this.documents.put(bundle.getId(), temp);
         }
     }
 }
